        PR 10478:         * elf.c (bfd_section_from_shdr): Do not reject sparc binaries with         section headers containing sh_link values of SHN_BEFORE or         SHN_AFTER.         * elfcode.h (elf_object_p): Likewise.

readelf.c (get_elf_section_flags): Add support for SHF_EXCLUDE and
        SHF_ORDERED.
        (process_section_headers): Warn about out of range sh_link
        values.  When displaying detailed section header information
        annote the SHN_BEFORE and SHN_AFTER values.